--- a/src/assets/css/vscode/vscode-default/vscode-dark-theme.css
+++ b/src/assets/css/vscode/vscode-default/vscode-dark-theme.css
@@ -49,9 +49,9 @@
   --vscode-scrollbarSlider-hoverBackground: rgba(100, 100, 100, 0.7);
   --vscode-scrollbarSlider-activeBackground: rgba(191, 191, 191, 0.4);
   --vscode-progressBar-background: #0e70c0;
-  --vscode-editorError-foreground: #f48771;
+  --vscode-editorError-foreground: #f14c4c;
   --vscode-editorWarning-foreground: #cca700;
-  --vscode-editorInfo-foreground: #75beff;
+  --vscode-editorInfo-foreground: #3794ff;
   --vscode-editorHint-foreground: rgba(238, 238, 238, 0.7);
   --vscode-sash-hoverBorder: #007fd4;
   --vscode-editor-background: #1e1e1e;
@@ -81,8 +81,12 @@
   --vscode-editorHoverWidget-border: #454545;
   --vscode-editorHoverWidget-statusBarBackground: #2c2c2d;
   --vscode-editorLink-activeForeground: #4e94ce;
-  --vscode-editorInlayHint-foreground: #252526;
-  --vscode-editorInlayHint-background: #cccccc;
+  --vscode-editorInlayHint-foreground: rgba(255, 255, 255, 0.8);
+  --vscode-editorInlayHint-background: rgba(77, 77, 77, 0.6);
+  --vscode-editorInlayHint-typeForeground: rgba(255, 255, 255, 0.8);
+  --vscode-editorInlayHint-typeBackground: rgba(77, 77, 77, 0.6);
+  --vscode-editorInlayHint-parameterForeground: rgba(255, 255, 255, 0.8);
+  --vscode-editorInlayHint-parameterBackground: rgba(77, 77, 77, 0.6);
   --vscode-editorLightBulb-foreground: #ffcc00;
   --vscode-editorLightBulbAutoFix-foreground: #75beff;
   --vscode-diffEditor-insertedTextBackground: rgba(155, 185, 85, 0.2);
@@ -136,19 +140,21 @@
   --vscode-editorOverviewRuler-findMatchForeground: rgba(209, 134, 22, 0.49);
   --vscode-editorOverviewRuler-selectionHighlightForeground: rgba(160, 160, 160, 0.8);
   --vscode-minimap-findMatchHighlight: #d18616;
+  --vscode-minimap-selectionOccurrenceHighlight: #676767;
   --vscode-minimap-selectionHighlight: #264f78;
   --vscode-minimap-errorHighlight: rgba(255, 18, 18, 0.7);
   --vscode-minimap-warningHighlight: #cca700;
+  --vscode-minimap-foregroundOpacity: #000000;
   --vscode-minimapSlider-background: rgba(121, 121, 121, 0.2);
   --vscode-minimapSlider-hoverBackground: rgba(100, 100, 100, 0.35);
   --vscode-minimapSlider-activeBackground: rgba(191, 191, 191, 0.2);
-  --vscode-problemsErrorIcon-foreground: #f48771;
+  --vscode-problemsErrorIcon-foreground: #f14c4c;
   --vscode-problemsWarningIcon-foreground: #cca700;
-  --vscode-problemsInfoIcon-foreground: #75beff;
+  --vscode-problemsInfoIcon-foreground: #3794ff;
   --vscode-charts-foreground: #cccccc;
   --vscode-charts-lines: rgba(204, 204, 204, 0.5);
-  --vscode-charts-red: #f48771;
-  --vscode-charts-blue: #75beff;
+  --vscode-charts-red: #f14c4c;
+  --vscode-charts-blue: #3794ff;
   --vscode-charts-yellow: #cca700;
   --vscode-charts-orange: #d18616;
   --vscode-charts-green: #89d185;
@@ -174,7 +180,26 @@
   --vscode-editorOverviewRuler-rangeHighlightForeground: rgba(0, 122, 204, 0.6);
   --vscode-editorOverviewRuler-errorForeground: rgba(255, 18, 18, 0.7);
   --vscode-editorOverviewRuler-warningForeground: #cca700;
-  --vscode-editorOverviewRuler-infoForeground: #75beff;
+  --vscode-editorOverviewRuler-infoForeground: #3794ff;
+  --vscode-editorBracketHighlight-foreground1: #ffd700;
+  --vscode-editorBracketHighlight-foreground2: #da70d6;
+  --vscode-editorBracketHighlight-foreground3: #179fff;
+  --vscode-editorBracketHighlight-foreground4: rgba(0, 0, 0, 0);
+  --vscode-editorBracketHighlight-foreground5: rgba(0, 0, 0, 0);
+  --vscode-editorBracketHighlight-foreground6: rgba(0, 0, 0, 0);
+  --vscode-editorBracketHighlight-foreground: rgba(255, 18, 18, 0.8);
+  --vscode-editorBracketPairGuide-background1: rgba(0, 0, 0, 0);
+  --vscode-editorBracketPairGuide-background2: rgba(0, 0, 0, 0);
+  --vscode-editorBracketPairGuide-background3: rgba(0, 0, 0, 0);
+  --vscode-editorBracketPairGuide-background4: rgba(0, 0, 0, 0);
+  --vscode-editorBracketPairGuide-background5: rgba(0, 0, 0, 0);
+  --vscode-editorBracketPairGuide-background6: rgba(0, 0, 0, 0);
+  --vscode-editorBracketPairGuide-activeBackground1: rgba(0, 0, 0, 0);
+  --vscode-editorBracketPairGuide-activeBackground2: rgba(0, 0, 0, 0);
+  --vscode-editorBracketPairGuide-activeBackground3: rgba(0, 0, 0, 0);
+  --vscode-editorBracketPairGuide-activeBackground4: rgba(0, 0, 0, 0);
+  --vscode-editorBracketPairGuide-activeBackground5: rgba(0, 0, 0, 0);
+  --vscode-editorBracketPairGuide-activeBackground6: rgba(0, 0, 0, 0);
   --vscode-symbolIcon-arrayForeground: #cccccc;
   --vscode-symbolIcon-booleanForeground: #cccccc;
   --vscode-symbolIcon-classForeground: #ee9d28;
@@ -208,18 +233,27 @@
   --vscode-symbolIcon-typeParameterForeground: #cccccc;
   --vscode-symbolIcon-unitForeground: #cccccc;
   --vscode-symbolIcon-variableForeground: #75beff;
+  --vscode-editorHoverWidget-highlightForeground: #18a3ff;
   --vscode-editorOverviewRuler-bracketMatchForeground: #a0a0a0;
+  --vscode-editor-foldBackground: rgba(38, 79, 120, 0.3);
+  --vscode-editorGutter-foldingControlForeground: #c5c5c5;
   --vscode-editor-linkedEditingBackground: rgba(255, 0, 0, 0.3);
+  --vscode-editorSuggestWidget-background: #252526;
+  --vscode-editorSuggestWidget-border: #454545;
+  --vscode-editorSuggestWidget-foreground: #d4d4d4;
+  --vscode-editorSuggestWidget-selectedForeground: #ffffff;
+  --vscode-editorSuggestWidget-selectedIconForeground: #ffffff;
+  --vscode-editorSuggestWidget-selectedBackground: #094771;
+  --vscode-editorSuggestWidget-highlightForeground: #18a3ff;
+  --vscode-editorSuggestWidget-focusHighlightForeground: #18a3ff;
   --vscode-editor-wordHighlightBackground: rgba(87, 87, 87, 0.72);
   --vscode-editor-wordHighlightStrongBackground: rgba(0, 73, 114, 0.72);
   --vscode-editorOverviewRuler-wordHighlightForeground: rgba(160, 160, 160, 0.8);
   --vscode-editorOverviewRuler-wordHighlightStrongForeground: rgba(192, 160, 192, 0.8);
-  --vscode-editor-foldBackground: rgba(38, 79, 120, 0.3);
-  --vscode-editorGutter-foldingControlForeground: #c5c5c5;
-  --vscode-peekViewTitle-background: #1e1e1e;
+  --vscode-peekViewTitle-background: rgba(55, 148, 255, 0.1);
   --vscode-peekViewTitleLabel-foreground: #ffffff;
   --vscode-peekViewTitleDescription-foreground: rgba(204, 204, 204, 0.7);
-  --vscode-peekView-border: #007acc;
+  --vscode-peekView-border: #3794ff;
   --vscode-peekViewResult-background: #252526;
   --vscode-peekViewResult-lineForeground: #bbbbbb;
   --vscode-peekViewResult-fileForeground: #ffffff;
@@ -229,18 +263,13 @@
   --vscode-peekViewEditorGutter-background: #001f33;
   --vscode-peekViewResult-matchHighlightBackground: rgba(234, 92, 0, 0.3);
   --vscode-peekViewEditor-matchHighlightBackground: rgba(255, 143, 0, 0.6);
-  --vscode-editorMarkerNavigationError-background: #f48771;
+  --vscode-editorMarkerNavigationError-background: #f14c4c;
+  --vscode-editorMarkerNavigationError-headerBackground: rgba(241, 76, 76, 0.1);
   --vscode-editorMarkerNavigationWarning-background: #cca700;
-  --vscode-editorMarkerNavigationInfo-background: #75beff;
-  --vscode-editorMarkerNavigation-background: #2d2d30;
-  --vscode-editorSuggestWidget-background: #252526;
-  --vscode-editorSuggestWidget-border: #454545;
-  --vscode-editorSuggestWidget-foreground: #d4d4d4;
-  --vscode-editorSuggestWidget-selectedForeground: #ffffff;
-  --vscode-editorSuggestWidget-selectedIconForeground: #ffffff;
-  --vscode-editorSuggestWidget-selectedBackground: #094771;
-  --vscode-editorSuggestWidget-highlightForeground: #18a3ff;
-  --vscode-editorSuggestWidget-focusHighlightForeground: #18a3ff;
+  --vscode-editorMarkerNavigationWarning-headerBackground: rgba(204, 167, 0, 0.1);
+  --vscode-editorMarkerNavigationInfo-background: #3794ff;
+  --vscode-editorMarkerNavigationInfo-headerBackground: rgba(55, 148, 255, 0.1);
+  --vscode-editorMarkerNavigation-background: #1e1e1e;
   --vscode-tab-activeBackground: #1e1e1e;
   --vscode-tab-unfocusedActiveBackground: #1e1e1e;
   --vscode-tab-inactiveBackground: #2d2d2d;
@@ -260,6 +289,8 @@
   --vscode-editorGroupHeader-noTabsBackground: #1e1e1e;
   --vscode-editorGroup-border: #444444;
   --vscode-editorGroup-dropBackground: rgba(83, 89, 93, 0.5);
+  --vscode-sideBySideEditor-horizontalBorder: #444444;
+  --vscode-sideBySideEditor-verticalBorder: #444444;
   --vscode-panel-background: #1e1e1e;
   --vscode-panel-border: rgba(128, 128, 128, 0.35);
   --vscode-panelTitle-activeForeground: #e7e7e7;
@@ -271,7 +302,7 @@
   --vscode-panelSection-border: rgba(128, 128, 128, 0.35);
   --vscode-banner-background: #094771;
   --vscode-banner-foreground: #ffffff;
-  --vscode-banner-iconForeground: #75beff;
+  --vscode-banner-iconForeground: #3794ff;
   --vscode-statusBar-foreground: #ffffff;
   --vscode-statusBar-noFolderForeground: #ffffff;
   --vscode-statusBar-background: #007acc;
@@ -283,6 +314,8 @@
   --vscode-statusBarItem-prominentHoverBackground: rgba(0, 0, 0, 0.3);
   --vscode-statusBarItem-errorBackground: #c72e0f;
   --vscode-statusBarItem-errorForeground: #ffffff;
+  --vscode-statusBarItem-warningBackground: #7a6400;
+  --vscode-statusBarItem-warningForeground: #ffffff;
   --vscode-activityBar-background: #333333;
   --vscode-activityBar-foreground: #ffffff;
   --vscode-activityBar-inactiveForeground: rgba(255, 255, 255, 0.4);
@@ -310,9 +343,9 @@
   --vscode-notificationLink-foreground: #3794ff;
   --vscode-notificationCenterHeader-background: #303031;
   --vscode-notifications-border: #303031;
-  --vscode-notificationsErrorIcon-foreground: #f48771;
+  --vscode-notificationsErrorIcon-foreground: #f14c4c;
   --vscode-notificationsWarningIcon-foreground: #cca700;
-  --vscode-notificationsInfoIcon-foreground: #75beff;
+  --vscode-notificationsInfoIcon-foreground: #3794ff;
   --vscode-editorGutter-commentRangeForeground: #c5c5c5;
   --vscode-debugToolBar-background: #333333;
   --vscode-debugIcon-startForeground: #89d185;
@@ -343,23 +376,21 @@
   --vscode-testing-iconQueued: #cca700;
   --vscode-testing-iconUnset: #848484;
   --vscode-testing-iconSkipped: #848484;
-  --vscode-testing-peekBorder: #f48771;
-  --vscode-testing-message\.error\.decorationForeground: #f48771;
-  --vscode-testing-message\.error\.lineBackground: rgba(255, 0, 0, 0.2);
-  --vscode-testing-message\.warning\.decorationForeground: #cca700;
-  --vscode-testing-message\.warning\.lineBackground: rgba(255, 208, 0, 0.2);
-  --vscode-testing-message\.info\.decorationForeground: #75beff;
-  --vscode-testing-message\.info\.lineBackground: rgba(0, 127, 255, 0.2);
-  --vscode-testing-message\.hint\.decorationForeground: rgba(238, 238, 238, 0.7);
+  --vscode-testing-peekBorder: #f14c4c;
+  --vscode-testing-peekHeaderBackground: rgba(241, 76, 76, 0.1);
+  --vscode-testing-messageErrorDecorationForeground: #f14c4c;
+  --vscode-testing-messageErrorLineBackground: rgba(255, 0, 0, 0.2);
+  --vscode-testing-messageInfoDecorationForeground: rgba(212, 212, 212, 0.5);
   --vscode-welcomePage-tileBackground: #252526;
   --vscode-welcomePage-tileHoverBackground: #2c2c2d;
-  --vscode-welcomePage-tileShadow\.: rgba(0, 0, 0, 0.36);
-  --vscode-welcomePage-progress\.background: #3c3c3c;
-  --vscode-welcomePage-progress\.foreground: #3794ff;
+  --vscode-welcomePage-tileShadow: rgba(0, 0, 0, 0.36);
+  --vscode-welcomePage-progressBackground: #3c3c3c;
+  --vscode-welcomePage-progressForeground: #3794ff;
   --vscode-statusBar-debuggingBackground: #cc6633;
   --vscode-statusBar-debuggingForeground: #ffffff;
   --vscode-debugExceptionWidget-border: #a31515;
   --vscode-debugExceptionWidget-background: #420b0d;
+  --vscode-ports-iconRunningProcessForeground: #369432;
   --vscode-editorGutter-modifiedBackground: #0c7d9d;
   --vscode-editorGutter-addedBackground: #587c0c;
   --vscode-editorGutter-deletedBackground: #94151b;
@@ -369,6 +400,17 @@
   --vscode-editorOverviewRuler-modifiedForeground: rgba(12, 125, 157, 0.6);
   --vscode-editorOverviewRuler-addedForeground: rgba(88, 124, 12, 0.6);
   --vscode-editorOverviewRuler-deletedForeground: rgba(148, 21, 27, 0.6);
+  --vscode-keybindingTable-headerBackground: rgba(204, 204, 204, 0.04);
+  --vscode-keybindingTable-rowsBackground: rgba(204, 204, 204, 0.04);
+  --vscode-editor-stackFrameHighlightBackground: rgba(255, 255, 0, 0.2);
+  --vscode-editor-focusedStackFrameHighlightBackground: rgba(122, 189, 122, 0.3);
+  --vscode-debugIcon-breakpointForeground: #e51400;
+  --vscode-debugIcon-breakpointDisabledForeground: #848484;
+  --vscode-debugIcon-breakpointUnverifiedForeground: #848484;
+  --vscode-debugIcon-breakpointCurrentStackframeForeground: #ffcc00;
+  --vscode-debugIcon-breakpointStackframeForeground: #89d185;
+  --vscode-editor-inlineValuesForeground: rgba(255, 255, 255, 0.5);
+  --vscode-editor-inlineValuesBackground: rgba(255, 200, 0, 0.2);
   --vscode-notebook-cellBorderColor: #37373d;
   --vscode-notebook-focusedEditorBorder: #007fd4;
   --vscode-notebookStatusSuccessIcon-foreground: #89d185;
@@ -385,16 +427,7 @@
   --vscode-notebookScrollbarSlider-hoverBackground: rgba(100, 100, 100, 0.7);
   --vscode-notebookScrollbarSlider-activeBackground: rgba(191, 191, 191, 0.4);
   --vscode-notebook-symbolHighlightBackground: rgba(255, 255, 255, 0.04);
-  --vscode-editor-stackFrameHighlightBackground: rgba(255, 255, 0, 0.2);
-  --vscode-editor-focusedStackFrameHighlightBackground: rgba(122, 189, 122, 0.3);
-  --vscode-debugIcon-breakpointForeground: #e51400;
-  --vscode-debugIcon-breakpointDisabledForeground: #848484;
-  --vscode-debugIcon-breakpointUnverifiedForeground: #848484;
-  --vscode-debugIcon-breakpointCurrentStackframeForeground: #ffcc00;
-  --vscode-debugIcon-breakpointStackframeForeground: #89d185;
-  --vscode-editor-inlineValuesForeground: rgba(255, 255, 255, 0.5);
-  --vscode-editor-inlineValuesBackground: rgba(255, 200, 0, 0.2);
-  --vscode-ports-iconRunningProcessForeground: #369432;
+  --vscode-notebook-cellEditorBackground: #252526;
   --vscode-scm-providerBorder: #454545;
   --vscode-debugTokenExpression-name: #c586c0;
   --vscode-debugTokenExpression-value: rgba(204, 204, 204, 0.6);
@@ -407,7 +440,7 @@
   --vscode-debugView-stateLabelForeground: #cccccc;
   --vscode-debugView-stateLabelBackground: rgba(136, 136, 136, 0.27);
   --vscode-debugView-valueChangedHighlight: #569cd6;
-  --vscode-debugConsole-infoForeground: #75beff;
+  --vscode-debugConsole-infoForeground: #3794ff;
   --vscode-debugConsole-warningForeground: #cca700;
   --vscode-debugConsole-errorForeground: #f48771;
   --vscode-debugConsole-sourceForeground: #cccccc;
@@ -425,6 +458,7 @@
   --vscode-extensionButton-prominentForeground: #ffffff;
   --vscode-extensionButton-prominentHoverBackground: #1177bb;
   --vscode-extensionIcon-starForeground: #ff8e00;
+  --vscode-extensionIcon-verifiedForeground: #3794ff;
   --vscode-terminal-ansiBlack: #000000;
   --vscode-terminal-ansiRed: #cd3131;
   --vscode-terminal-ansiGreen: #0dbc79;
@@ -441,6 +475,8 @@
   --vscode-terminal-ansiBrightMagenta: #d670d6;
   --vscode-terminal-ansiBrightCyan: #29b8db;
   --vscode-terminal-ansiBrightWhite: #e5e5e5;
+  --vscode-interactive-activeCodeBorder: #3794ff;
+  --vscode-interactive-inactiveCodeBorder: #37373d;
   --vscode-gitDecoration-addedResourceForeground: #81b88b;
   --vscode-gitDecoration-modifiedResourceForeground: #e2c08d;
   --vscode-gitDecoration-deletedResourceForeground: #c74e39;
