--- a/src/assets/css/vscode/vscode-default/vscode-light-theme.css
+++ b/src/assets/css/vscode/vscode-default/vscode-light-theme.css
@@ -49,7 +49,7 @@
   --vscode-progressBar-background: #0e70c0;
   --vscode-editorError-foreground: #e51400;
   --vscode-editorWarning-foreground: #bf8803;
-  --vscode-editorInfo-foreground: #75beff;
+  --vscode-editorInfo-foreground: #1a85ff;
   --vscode-editorHint-foreground: #6c6c6c;
   --vscode-sash-hoverBorder: #0090f1;
   --vscode-editor-background: #ffffff;
@@ -79,8 +79,12 @@
   --vscode-editorHoverWidget-border: #c8c8c8;
   --vscode-editorHoverWidget-statusBarBackground: #e7e7e7;
   --vscode-editorLink-activeForeground: #0000ff;
-  --vscode-editorInlayHint-foreground: #616161;
-  --vscode-editorInlayHint-background: #f3f3f3;
+  --vscode-editorInlayHint-foreground: rgba(51, 51, 51, 0.8);
+  --vscode-editorInlayHint-background: rgba(196, 196, 196, 0.3);
+  --vscode-editorInlayHint-typeForeground: rgba(51, 51, 51, 0.8);
+  --vscode-editorInlayHint-typeBackground: rgba(196, 196, 196, 0.3);
+  --vscode-editorInlayHint-parameterForeground: rgba(51, 51, 51, 0.8);
+  --vscode-editorInlayHint-parameterBackground: rgba(196, 196, 196, 0.3);
   --vscode-editorLightBulb-foreground: #ddb100;
   --vscode-editorLightBulbAutoFix-foreground: #007acc;
   --vscode-diffEditor-insertedTextBackground: rgba(155, 185, 85, 0.2);
@@ -134,19 +138,21 @@
   --vscode-editorOverviewRuler-findMatchForeground: rgba(209, 134, 22, 0.49);
   --vscode-editorOverviewRuler-selectionHighlightForeground: rgba(160, 160, 160, 0.8);
   --vscode-minimap-findMatchHighlight: #d18616;
+  --vscode-minimap-selectionOccurrenceHighlight: #c9c9c9;
   --vscode-minimap-selectionHighlight: #add6ff;
   --vscode-minimap-errorHighlight: rgba(255, 18, 18, 0.7);
   --vscode-minimap-warningHighlight: #bf8803;
+  --vscode-minimap-foregroundOpacity: #000000;
   --vscode-minimapSlider-background: rgba(100, 100, 100, 0.2);
   --vscode-minimapSlider-hoverBackground: rgba(100, 100, 100, 0.35);
   --vscode-minimapSlider-activeBackground: rgba(0, 0, 0, 0.3);
   --vscode-problemsErrorIcon-foreground: #e51400;
   --vscode-problemsWarningIcon-foreground: #bf8803;
-  --vscode-problemsInfoIcon-foreground: #75beff;
+  --vscode-problemsInfoIcon-foreground: #1a85ff;
   --vscode-charts-foreground: #616161;
   --vscode-charts-lines: rgba(97, 97, 97, 0.5);
   --vscode-charts-red: #e51400;
-  --vscode-charts-blue: #75beff;
+  --vscode-charts-blue: #1a85ff;
   --vscode-charts-yellow: #bf8803;
   --vscode-charts-orange: #d18616;
   --vscode-charts-green: #388a34;
@@ -172,7 +178,26 @@
   --vscode-editorOverviewRuler-rangeHighlightForeground: rgba(0, 122, 204, 0.6);
   --vscode-editorOverviewRuler-errorForeground: rgba(255, 18, 18, 0.7);
   --vscode-editorOverviewRuler-warningForeground: #bf8803;
-  --vscode-editorOverviewRuler-infoForeground: #75beff;
+  --vscode-editorOverviewRuler-infoForeground: #1a85ff;
+  --vscode-editorBracketHighlight-foreground1: #0431fa;
+  --vscode-editorBracketHighlight-foreground2: #319331;
+  --vscode-editorBracketHighlight-foreground3: #7b3814;
+  --vscode-editorBracketHighlight-foreground4: rgba(0, 0, 0, 0);
+  --vscode-editorBracketHighlight-foreground5: rgba(0, 0, 0, 0);
+  --vscode-editorBracketHighlight-foreground6: rgba(0, 0, 0, 0);
+  --vscode-editorBracketHighlight-foreground: rgba(255, 18, 18, 0.8);
+  --vscode-editorBracketPairGuide-background1: rgba(0, 0, 0, 0);
+  --vscode-editorBracketPairGuide-background2: rgba(0, 0, 0, 0);
+  --vscode-editorBracketPairGuide-background3: rgba(0, 0, 0, 0);
+  --vscode-editorBracketPairGuide-background4: rgba(0, 0, 0, 0);
+  --vscode-editorBracketPairGuide-background5: rgba(0, 0, 0, 0);
+  --vscode-editorBracketPairGuide-background6: rgba(0, 0, 0, 0);
+  --vscode-editorBracketPairGuide-activeBackground1: rgba(0, 0, 0, 0);
+  --vscode-editorBracketPairGuide-activeBackground2: rgba(0, 0, 0, 0);
+  --vscode-editorBracketPairGuide-activeBackground3: rgba(0, 0, 0, 0);
+  --vscode-editorBracketPairGuide-activeBackground4: rgba(0, 0, 0, 0);
+  --vscode-editorBracketPairGuide-activeBackground5: rgba(0, 0, 0, 0);
+  --vscode-editorBracketPairGuide-activeBackground6: rgba(0, 0, 0, 0);
   --vscode-symbolIcon-arrayForeground: #616161;
   --vscode-symbolIcon-booleanForeground: #616161;
   --vscode-symbolIcon-classForeground: #d67e00;
@@ -206,18 +231,27 @@
   --vscode-symbolIcon-typeParameterForeground: #616161;
   --vscode-symbolIcon-unitForeground: #616161;
   --vscode-symbolIcon-variableForeground: #007acc;
+  --vscode-editorHoverWidget-highlightForeground: #0066bf;
   --vscode-editorOverviewRuler-bracketMatchForeground: #a0a0a0;
+  --vscode-editor-foldBackground: rgba(173, 214, 255, 0.3);
+  --vscode-editorGutter-foldingControlForeground: #424242;
   --vscode-editor-linkedEditingBackground: rgba(255, 0, 0, 0.3);
+  --vscode-editorSuggestWidget-background: #f3f3f3;
+  --vscode-editorSuggestWidget-border: #c8c8c8;
+  --vscode-editorSuggestWidget-foreground: #000000;
+  --vscode-editorSuggestWidget-selectedForeground: #ffffff;
+  --vscode-editorSuggestWidget-selectedIconForeground: #ffffff;
+  --vscode-editorSuggestWidget-selectedBackground: #0060c0;
+  --vscode-editorSuggestWidget-highlightForeground: #0066bf;
+  --vscode-editorSuggestWidget-focusHighlightForeground: #9dddff;
   --vscode-editor-wordHighlightBackground: rgba(87, 87, 87, 0.25);
   --vscode-editor-wordHighlightStrongBackground: rgba(14, 99, 156, 0.25);
   --vscode-editorOverviewRuler-wordHighlightForeground: rgba(160, 160, 160, 0.8);
   --vscode-editorOverviewRuler-wordHighlightStrongForeground: rgba(192, 160, 192, 0.8);
-  --vscode-editor-foldBackground: rgba(173, 214, 255, 0.3);
-  --vscode-editorGutter-foldingControlForeground: #424242;
-  --vscode-peekViewTitle-background: #ffffff;
-  --vscode-peekViewTitleLabel-foreground: #333333;
-  --vscode-peekViewTitleDescription-foreground: rgba(97, 97, 97, 0.9);
-  --vscode-peekView-border: #007acc;
+  --vscode-peekViewTitle-background: rgba(26, 133, 255, 0.1);
+  --vscode-peekViewTitleLabel-foreground: #000000;
+  --vscode-peekViewTitleDescription-foreground: #616161;
+  --vscode-peekView-border: #1a85ff;
   --vscode-peekViewResult-background: #f3f3f3;
   --vscode-peekViewResult-lineForeground: #646465;
   --vscode-peekViewResult-fileForeground: #1e1e1e;
@@ -228,17 +262,12 @@
   --vscode-peekViewResult-matchHighlightBackground: rgba(234, 92, 0, 0.3);
   --vscode-peekViewEditor-matchHighlightBackground: rgba(245, 216, 2, 0.87);
   --vscode-editorMarkerNavigationError-background: #e51400;
+  --vscode-editorMarkerNavigationError-headerBackground: rgba(229, 20, 0, 0.1);
   --vscode-editorMarkerNavigationWarning-background: #bf8803;
-  --vscode-editorMarkerNavigationInfo-background: #75beff;
+  --vscode-editorMarkerNavigationWarning-headerBackground: rgba(191, 136, 3, 0.1);
+  --vscode-editorMarkerNavigationInfo-background: #1a85ff;
+  --vscode-editorMarkerNavigationInfo-headerBackground: rgba(26, 133, 255, 0.1);
   --vscode-editorMarkerNavigation-background: #ffffff;
-  --vscode-editorSuggestWidget-background: #f3f3f3;
-  --vscode-editorSuggestWidget-border: #c8c8c8;
-  --vscode-editorSuggestWidget-foreground: #000000;
-  --vscode-editorSuggestWidget-selectedForeground: #ffffff;
-  --vscode-editorSuggestWidget-selectedIconForeground: #ffffff;
-  --vscode-editorSuggestWidget-selectedBackground: #0060c0;
-  --vscode-editorSuggestWidget-highlightForeground: #0066bf;
-  --vscode-editorSuggestWidget-focusHighlightForeground: #9dddff;
   --vscode-tab-activeBackground: #ffffff;
   --vscode-tab-unfocusedActiveBackground: #ffffff;
   --vscode-tab-inactiveBackground: #ececec;
@@ -258,6 +287,8 @@
   --vscode-editorGroupHeader-noTabsBackground: #ffffff;
   --vscode-editorGroup-border: #e7e7e7;
   --vscode-editorGroup-dropBackground: rgba(38, 119, 203, 0.18);
+  --vscode-sideBySideEditor-horizontalBorder: #e7e7e7;
+  --vscode-sideBySideEditor-verticalBorder: #e7e7e7;
   --vscode-panel-background: #ffffff;
   --vscode-panel-border: rgba(128, 128, 128, 0.35);
   --vscode-panelTitle-activeForeground: #424242;
@@ -268,9 +299,9 @@
   --vscode-panelSection-dropBackground: rgba(38, 119, 203, 0.18);
   --vscode-panelSectionHeader-background: rgba(128, 128, 128, 0.2);
   --vscode-panelSection-border: rgba(128, 128, 128, 0.35);
-  --vscode-banner-background: #0060c0;
+  --vscode-banner-background: #004386;
   --vscode-banner-foreground: #ffffff;
-  --vscode-banner-iconForeground: #75beff;
+  --vscode-banner-iconForeground: #1a85ff;
   --vscode-statusBar-foreground: #ffffff;
   --vscode-statusBar-noFolderForeground: #ffffff;
   --vscode-statusBar-background: #007acc;
@@ -282,6 +313,8 @@
   --vscode-statusBarItem-prominentHoverBackground: rgba(0, 0, 0, 0.3);
   --vscode-statusBarItem-errorBackground: #c72e0f;
   --vscode-statusBarItem-errorForeground: #ffffff;
+  --vscode-statusBarItem-warningBackground: #725102;
+  --vscode-statusBarItem-warningForeground: #ffffff;
   --vscode-activityBar-background: #2c2c2c;
   --vscode-activityBar-foreground: #ffffff;
   --vscode-activityBar-inactiveForeground: rgba(255, 255, 255, 0.4);
@@ -311,7 +344,7 @@
   --vscode-notifications-border: #e7e7e7;
   --vscode-notificationsErrorIcon-foreground: #e51400;
   --vscode-notificationsWarningIcon-foreground: #bf8803;
-  --vscode-notificationsInfoIcon-foreground: #75beff;
+  --vscode-notificationsInfoIcon-foreground: #1a85ff;
   --vscode-editorGutter-commentRangeForeground: #c5c5c5;
   --vscode-debugToolBar-background: #f3f3f3;
   --vscode-debugIcon-startForeground: #388a34;
@@ -341,22 +374,20 @@
   --vscode-testing-iconUnset: #848484;
   --vscode-testing-iconSkipped: #848484;
   --vscode-testing-peekBorder: #e51400;
-  --vscode-testing-message\.error\.decorationForeground: #e51400;
-  --vscode-testing-message\.error\.lineBackground: rgba(255, 0, 0, 0.2);
-  --vscode-testing-message\.warning\.decorationForeground: #bf8803;
-  --vscode-testing-message\.warning\.lineBackground: rgba(255, 208, 0, 0.2);
-  --vscode-testing-message\.info\.decorationForeground: #75beff;
-  --vscode-testing-message\.info\.lineBackground: rgba(0, 127, 255, 0.2);
-  --vscode-testing-message\.hint\.decorationForeground: #6c6c6c;
+  --vscode-testing-peekHeaderBackground: rgba(229, 20, 0, 0.1);
+  --vscode-testing-messageErrorDecorationForeground: #e51400;
+  --vscode-testing-messageErrorLineBackground: rgba(255, 0, 0, 0.2);
+  --vscode-testing-messageInfoDecorationForeground: rgba(0, 0, 0, 0.5);
   --vscode-welcomePage-tileBackground: #f3f3f3;
   --vscode-welcomePage-tileHoverBackground: #dbdbdb;
-  --vscode-welcomePage-tileShadow\.: rgba(0, 0, 0, 0.16);
-  --vscode-welcomePage-progress\.background: #ffffff;
-  --vscode-welcomePage-progress\.foreground: #006ab1;
+  --vscode-welcomePage-tileShadow: rgba(0, 0, 0, 0.16);
+  --vscode-welcomePage-progressBackground: #ffffff;
+  --vscode-welcomePage-progressForeground: #006ab1;
   --vscode-statusBar-debuggingBackground: #cc6633;
   --vscode-statusBar-debuggingForeground: #ffffff;
   --vscode-debugExceptionWidget-border: #a31515;
   --vscode-debugExceptionWidget-background: #f1dfde;
+  --vscode-ports-iconRunningProcessForeground: #369432;
   --vscode-editorGutter-modifiedBackground: #66afe0;
   --vscode-editorGutter-addedBackground: #81b88b;
   --vscode-editorGutter-deletedBackground: #ca4b51;
@@ -366,6 +397,17 @@
   --vscode-editorOverviewRuler-modifiedForeground: rgba(102, 175, 224, 0.6);
   --vscode-editorOverviewRuler-addedForeground: rgba(129, 184, 139, 0.6);
   --vscode-editorOverviewRuler-deletedForeground: rgba(202, 75, 81, 0.6);
+  --vscode-keybindingTable-headerBackground: rgba(97, 97, 97, 0.04);
+  --vscode-keybindingTable-rowsBackground: rgba(97, 97, 97, 0.04);
+  --vscode-editor-stackFrameHighlightBackground: rgba(255, 255, 102, 0.45);
+  --vscode-editor-focusedStackFrameHighlightBackground: rgba(206, 231, 206, 0.45);
+  --vscode-debugIcon-breakpointForeground: #e51400;
+  --vscode-debugIcon-breakpointDisabledForeground: #848484;
+  --vscode-debugIcon-breakpointUnverifiedForeground: #848484;
+  --vscode-debugIcon-breakpointCurrentStackframeForeground: #be8700;
+  --vscode-debugIcon-breakpointStackframeForeground: #89d185;
+  --vscode-editor-inlineValuesForeground: rgba(0, 0, 0, 0.5);
+  --vscode-editor-inlineValuesBackground: rgba(255, 200, 0, 0.2);
   --vscode-notebook-cellBorderColor: #e8e8e8;
   --vscode-notebook-focusedEditorBorder: #0090f1;
   --vscode-notebookStatusSuccessIcon-foreground: #388a34;
@@ -382,16 +424,7 @@
   --vscode-notebookScrollbarSlider-hoverBackground: rgba(100, 100, 100, 0.7);
   --vscode-notebookScrollbarSlider-activeBackground: rgba(0, 0, 0, 0.6);
   --vscode-notebook-symbolHighlightBackground: rgba(253, 255, 0, 0.2);
-  --vscode-editor-stackFrameHighlightBackground: rgba(255, 255, 102, 0.45);
-  --vscode-editor-focusedStackFrameHighlightBackground: rgba(206, 231, 206, 0.45);
-  --vscode-debugIcon-breakpointForeground: #e51400;
-  --vscode-debugIcon-breakpointDisabledForeground: #848484;
-  --vscode-debugIcon-breakpointUnverifiedForeground: #848484;
-  --vscode-debugIcon-breakpointCurrentStackframeForeground: #be8700;
-  --vscode-debugIcon-breakpointStackframeForeground: #89d185;
-  --vscode-editor-inlineValuesForeground: rgba(0, 0, 0, 0.5);
-  --vscode-editor-inlineValuesBackground: rgba(255, 200, 0, 0.2);
-  --vscode-ports-iconRunningProcessForeground: #369432;
+  --vscode-notebook-cellEditorBackground: #f3f3f3;
   --vscode-scm-providerBorder: #c8c8c8;
   --vscode-searchEditor-textInputBorder: #cecece;
   --vscode-debugTokenExpression-name: #9b46b0;
@@ -405,7 +438,7 @@
   --vscode-debugView-stateLabelForeground: #616161;
   --vscode-debugView-stateLabelBackground: rgba(136, 136, 136, 0.27);
   --vscode-debugView-valueChangedHighlight: #569cd6;
-  --vscode-debugConsole-infoForeground: #75beff;
+  --vscode-debugConsole-infoForeground: #1a85ff;
   --vscode-debugConsole-warningForeground: #bf8803;
   --vscode-debugConsole-errorForeground: #a1260d;
   --vscode-debugConsole-sourceForeground: #616161;
@@ -423,6 +456,7 @@
   --vscode-extensionButton-prominentForeground: #ffffff;
   --vscode-extensionButton-prominentHoverBackground: #0062a3;
   --vscode-extensionIcon-starForeground: #df6100;
+  --vscode-extensionIcon-verifiedForeground: #006ab1;
   --vscode-terminal-ansiBlack: #000000;
   --vscode-terminal-ansiRed: #cd3131;
   --vscode-terminal-ansiGreen: #00bc00;
@@ -439,6 +473,8 @@
   --vscode-terminal-ansiBrightMagenta: #bc05bc;
   --vscode-terminal-ansiBrightCyan: #0598bc;
   --vscode-terminal-ansiBrightWhite: #a5a5a5;
+  --vscode-interactive-activeCodeBorder: #1a85ff;
+  --vscode-interactive-inactiveCodeBorder: #e4e6f1;
   --vscode-gitDecoration-addedResourceForeground: #587c0c;
   --vscode-gitDecoration-modifiedResourceForeground: #895503;
   --vscode-gitDecoration-deletedResourceForeground: #ad0707;
