--- a/src/assets/css/vscode/vscode-default/all.css
+++ b/src/assets/css/vscode/vscode-default/all.css
@@ -1,3 +1,3 @@
-@import "vscode-dark-theme";
-@import "vscode-light-theme";
-@import "vscode-default";
+@import 'vscode-dark-theme';
+@import 'vscode-light-theme';
+@import 'vscode-default';
