--- a/src/assets/css/vscode/vscode-default/vscode-dark-theme.css
+++ b/src/assets/css/vscode/vscode-default/vscode-dark-theme.css
@@ -1,8 +1,9 @@
 .vscode-dark {
-  --vscode-font-family: -apple-system, BlinkMacSystemFont, "Segoe WPC", "Segoe UI", sans-serif;
+  --vscode-font-family: -apple-system, BlinkMacSystemFont, 'Segoe WPC',
+    'Segoe UI', sans-serif;
   --vscode-font-weight: normal;
   --vscode-font-size: 13px;
-  --vscode-editor-font-family: Menlo, Monaco, Consolas, "Courier New", monospace;
+  --vscode-editor-font-family: Menlo, Monaco, Consolas, 'Courier New', monospace;
   --vscode-editor-font-weight: normal;
   --vscode-editor-font-size: 14px;
   --vscode-foreground: #cccccc;
@@ -134,11 +135,26 @@
   --vscode-merge-incomingContentBackground: rgba(64, 166, 255, 0.2);
   --vscode-merge-commonHeaderBackground: rgba(96, 96, 96, 0.4);
   --vscode-merge-commonContentBackground: rgba(96, 96, 96, 0.16);
-  --vscode-editorOverviewRuler-currentContentForeground: rgba(64, 200, 174, 0.5);
-  --vscode-editorOverviewRuler-incomingContentForeground: rgba(64, 166, 255, 0.5);
+  --vscode-editorOverviewRuler-currentContentForeground: rgba(
+    64,
+    200,
+    174,
+    0.5
+  );
+  --vscode-editorOverviewRuler-incomingContentForeground: rgba(
+    64,
+    166,
+    255,
+    0.5
+  );
   --vscode-editorOverviewRuler-commonContentForeground: rgba(96, 96, 96, 0.4);
   --vscode-editorOverviewRuler-findMatchForeground: rgba(209, 134, 22, 0.49);
-  --vscode-editorOverviewRuler-selectionHighlightForeground: rgba(160, 160, 160, 0.8);
+  --vscode-editorOverviewRuler-selectionHighlightForeground: rgba(
+    160,
+    160,
+    160,
+    0.8
+  );
   --vscode-minimap-findMatchHighlight: #d18616;
   --vscode-minimap-selectionOccurrenceHighlight: #676767;
   --vscode-minimap-selectionHighlight: #264f78;
@@ -248,8 +264,18 @@
   --vscode-editorSuggestWidget-focusHighlightForeground: #18a3ff;
   --vscode-editor-wordHighlightBackground: rgba(87, 87, 87, 0.72);
   --vscode-editor-wordHighlightStrongBackground: rgba(0, 73, 114, 0.72);
-  --vscode-editorOverviewRuler-wordHighlightForeground: rgba(160, 160, 160, 0.8);
-  --vscode-editorOverviewRuler-wordHighlightStrongForeground: rgba(192, 160, 192, 0.8);
+  --vscode-editorOverviewRuler-wordHighlightForeground: rgba(
+    160,
+    160,
+    160,
+    0.8
+  );
+  --vscode-editorOverviewRuler-wordHighlightStrongForeground: rgba(
+    192,
+    160,
+    192,
+    0.8
+  );
   --vscode-peekViewTitle-background: rgba(55, 148, 255, 0.1);
   --vscode-peekViewTitleLabel-foreground: #ffffff;
   --vscode-peekViewTitleDescription-foreground: rgba(204, 204, 204, 0.7);
@@ -266,7 +292,12 @@
   --vscode-editorMarkerNavigationError-background: #f14c4c;
   --vscode-editorMarkerNavigationError-headerBackground: rgba(241, 76, 76, 0.1);
   --vscode-editorMarkerNavigationWarning-background: #cca700;
-  --vscode-editorMarkerNavigationWarning-headerBackground: rgba(204, 167, 0, 0.1);
+  --vscode-editorMarkerNavigationWarning-headerBackground: rgba(
+    204,
+    167,
+    0,
+    0.1
+  );
   --vscode-editorMarkerNavigationInfo-background: #3794ff;
   --vscode-editorMarkerNavigationInfo-headerBackground: rgba(55, 148, 255, 0.1);
   --vscode-editorMarkerNavigation-background: #1e1e1e;
@@ -403,7 +434,12 @@
   --vscode-keybindingTable-headerBackground: rgba(204, 204, 204, 0.04);
   --vscode-keybindingTable-rowsBackground: rgba(204, 204, 204, 0.04);
   --vscode-editor-stackFrameHighlightBackground: rgba(255, 255, 0, 0.2);
-  --vscode-editor-focusedStackFrameHighlightBackground: rgba(122, 189, 122, 0.3);
+  --vscode-editor-focusedStackFrameHighlightBackground: rgba(
+    122,
+    189,
+    122,
+    0.3
+  );
   --vscode-debugIcon-breakpointForeground: #e51400;
   --vscode-debugIcon-breakpointDisabledForeground: #848484;
   --vscode-debugIcon-breakpointUnverifiedForeground: #848484;
