--- a/src/assets/css/vscode/vscode-default/vscode-default.css
+++ b/src/assets/css/vscode/vscode-default/vscode-default.css
@@ -1,5 +1,6 @@
 html {
-  scrollbar-color: var(--vscode-scrollbarSlider-background) var(--vscode-editor-background);
+  scrollbar-color: var(--vscode-scrollbarSlider-background)
+    var(--vscode-editor-background);
 }
 
 body {
@@ -49,17 +50,17 @@ kbd {
   vertical-align: middle;
   padding: 1px 3px;
 
-  background-color: hsla(0, 0%, 50%, .17);
-  border: 1px solid rgba(71, 71, 71, .4);
-  border-bottom-color: rgba(88, 88, 88, .4);
-  box-shadow: inset 0 -1px 0 rgba(88, 88, 88, .4);
+  background-color: hsla(0, 0%, 50%, 0.17);
+  border: 1px solid rgba(71, 71, 71, 0.4);
+  border-bottom-color: rgba(88, 88, 88, 0.4);
+  box-shadow: inset 0 -1px 0 rgba(88, 88, 88, 0.4);
 }
 
 .vscode-light kbd {
-  background-color: hsla(0, 0%, 87%, .5);
-  border: 1px solid hsla(0, 0%, 80%, .7);
-  border-bottom-color: hsla(0, 0%, 73%, .7);
-  box-shadow: inset 0 -1px 0 hsla(0, 0%, 73%, .7);
+  background-color: hsla(0, 0%, 87%, 0.5);
+  border: 1px solid hsla(0, 0%, 80%, 0.7);
+  border-bottom-color: hsla(0, 0%, 73%, 0.7);
+  box-shadow: inset 0 -1px 0 hsla(0, 0%, 73%, 0.7);
 }
 
 ::-webkit-scrollbar {
